Fixes left-hand nav misaligned (PM#6592).

--- a/theme/shippable/static/ash/css/fleming.css
+++ b/theme/shippable/static/ash/css/fleming.css
@@ -228,6 +228,7 @@ a:hover, a:focus, a:active {
 }
 .side-nav #side-nav li li h4 {
   border-left: 2px solid rgba(188, 181, 185, 0.3);
+  padding-left: 1.5em;
 }
 .side-nav a.currentPage {
   border-left: 2px solid #009999;
